# johninstall

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  HACKING.md  LICENSE  README.md  build.sh  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
config/: conf.json
source/: lib.cpp
src/: answer_box.hpp  config.hpp  curse.hpp  inputs.hpp  lib.cpp  logger.hpp  main.cpp  reference.sh  selector.hpp  sysread.hpp  window.hpp  windows.hpp
test/: CMakeLists.txt
test/source/: johninstall_test.cpp
